# amgi

./: .gitignore  .pre-commit-config.yaml  .python-versions  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  conf.py  conftest.py  diff  docs-requirements.txt  pyproject.toml  tox.ini
.github/workflows/: publish.yml  release.yml  tests.yml
docs/: extensions.rst  index.rst  specifications.rst
docs/_ext/: typeddict.py
docs/specifications/: amgi.rst  bindings.rst  lifespan.py  lifespan.rst  message.py  message.rst
example/: README.md  main.py  pyproject.toml
example/amqp/: docker-compose.yaml
example/kafka/: docker-compose.yaml
example/mqtt/: docker-compose.yaml  mosquitto.conf
example/nats/: docker-compose.yaml
example/redis/: docker-compose.yaml
example/sqs/: docker-compose.yaml
examples/kafka_example/: README.md  main.py  pyproject.toml
hooks/: pyproject_version_synchronize.py  tox_labels_in_test_matrix.py
