[project]
name = "acgi"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
  "packages/*",
  "examples/*",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
  "packages/*/pyproject.toml:version|acgi",
  "packages/*/README.md:pip install",
]
pre_bump_hooks = [
  "uv sync --all-packages",
  "uv run mdformat CHANGELOG.md",
]
