[project]
name = "amgi"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]

[dependency-groups]
dev = [
  "exceptiongroup>=1.3.0",
  "pre-commit-uv>=4.1.4",
  "tox>=4.28.4",
  "tox-uv>=1.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
  "packages/*",
  "examples/*",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
  "packages/*/pyproject.toml:version|amgi",
  "packages/*/README.md:pip install",
]
pre_bump_hooks = [
  "uv sync --all-packages",
  "uv run mdformat CHANGELOG.md",
]
