[project]
name = "amgi"
version = "0.29.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

[dependency-groups]
dev = [
  "commitizen>=4.8.3",
  "coverage>=7.12.0",
  "furo>=2025.7.19",
  "mdformat>=0.7.22",
  "mypy>=1.17.1",
  "myst-parser>=3.0.1",
  "pre-commit-uv>=4.1.4",
  "sphinx>=7.4.7",
  "sphinx-copybutton>=0.5.2",
  "sphinx-inline-tabs>=2023.4.21",
  "sphinx-multiproject>=1.0.0",
  "tox>=4.28.4",
  "tox-uv>=1.27.0",
]

[tool.uv.workspace]
members = [
  "packages/*",
  "example",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10
timeout_func_only = true
filterwarnings = [
  "ignore:^The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning",
  "ignore:^The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]
markers = [
  "integration: tests that require external services (Docker/Testcontainers)",
]

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_bytes = true
extra_checks = true
allow_untyped_decorators = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
  "packages/*/pyproject.toml:version|amgi|asyncfast",
  "packages/*/README.md:pip install",
  "conf.py:release",
]
pre_bump_hooks = [
  "uv sync --all-packages",
  "uv run mdformat CHANGELOG.md",
]
