[project]
name = "example"
version = "0.0.0"
description = "This example is meant to demonstrate basic functionality"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "amgi-aiokafka",
  "amgi-paho-mqtt",
  "asyncfast",
]

[tool.uv.sources]
amgi-aiokafka = { workspace = true }
asyncfast = { workspace = true }
amgi-paho-mqtt = { workspace = true }
