[project]
name = "kafka-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiokafka-acgi",
  "asyncfast",
]

[tool.uv.sources]
aiokafka-acgi = { workspace = true }
asyncfast = { workspace = true }
